# LearnOpenGL

./: .gitignore  CMakeLists.txt
src/: camera.cpp  camera.h  fragment.glsl  light_fragment.glsl  light_vertex.glsl  main.cpp  shader_prog.cpp  shader_prog.h  vertex.glsl
